[package]
name = "chuck"
version = "0.1.0"
authors = ["Nino Paparo"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
wiremock = "0.5.17"
json = "0.12.4"
serde_json = "1.0.91"
dialoguer = "0.10.3"
anyhow = "1.0.68"
