[package]
name = "chuck"
version = "0.1.0"
authors = ["Nino Paparo"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
wiremock = "0.6.0"
jzon = "0.12.5"
serde_json = "1.0.105"
dialoguer = "0.11.0"
anyhow = "1.0.71"
